feat(frontend): add TailwindCSS via CDN

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCE-FW Service</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>:root { font-family: 'Inter', sans-serif; }</style>
   </head>
   <body>
     <div id="root"></div>
